--- a/2장/InhoShin/lecture-2/package.json
+++ b/2장/InhoShin/lecture-2/package.json
@@ -13,7 +13,7 @@
     "styled-components": "^5.1.1"
   },
   "scripts": {
-    "start": "export NODE_OPTIONS=--openssl-legacy-provider && react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "server": "node ./node_modules/json-server/lib/cli/bin.js --watch ./server/database.json -c ./server/config.json"
   },
@@ -33,6 +33,7 @@
     ]
   },
   "devDependencies": {
+    "cra-bundle-analyzer": "^0.1.1",
     "json-server": "^0.16.1"
   }
 }
