--- a/3장/YejiKim/lecture-3/package.json
+++ b/3장/YejiKim/lecture-3/package.json
@@ -41,6 +41,7 @@
     "autoprefixer": "^9.7.3",
     "json-server": "^0.15.1",
     "postcss-cli": "^7.1.0",
+    "purgecss": "^7.0.2",
     "serve": "^11.3.2"
   },
   "homepage": "."
