--- a/3장/InhoShin/lecture-3/package.json
+++ b/3장/InhoShin/lecture-3/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.1",
     "express": "^4.17.1",
+    "fontfaceobserver": "^2.3.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
@@ -16,10 +17,11 @@
   },
   "scripts": {
     "start": "npm run build:style && react-scripts start",
-    "build": "npm run build:style && react-scripts build",
+    "build": "npm run build:style && react-scripts build && npm run purge",
     "build:style": "postcss src/tailwind.css -o src/styles.css",
     "serve": "node ./server/server.js",
-    "server": "node ./node_modules/json-server/lib/cli/bin.js --watch ./server/database.json -c ./server/config.json"
+    "server": "node ./node_modules/json-server/lib/cli/bin.js --watch ./server/database.json -c ./server/config.json",
+    "purge": "npx purgecss --css ./build/static/css/*.css --output ./build/static/css/ --content ./build/index.html ./build/static/js/*.js --config purgecss.config.js"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -40,6 +42,7 @@
     "autoprefixer": "^9.7.3",
     "json-server": "^0.15.1",
     "postcss-cli": "^7.1.0",
+    "purgecss": "^7.0.2",
     "serve": "^11.3.2"
   }
 }
