--- a/4장/YejiKim/lecture-4/package.json
+++ b/4장/YejiKim/lecture-4/package.json
@@ -12,6 +12,8 @@
     "postcss-safe-parser": "^6.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-lazy-load": "^4.0.1",
+    "react-lazyload": "^3.2.1",
     "react-redux": "^7.2.3",
     "react-scripts": "4.0.3",
     "redux": "^4.0.5",
